Fix radio group error notice visibility

--- a/.dev/assets/shared/css/elements/forms.css
+++ b/.dev/assets/shared/css/elements/forms.css
@@ -42,7 +42,7 @@ input[type="color"] {
 
 input[type="radio"],
 input[type="checkbox"] {
-	appearance: none;
+	opacity: 0;
 }
 
 .coblocks-field {
